if (RADRAY_ENABLE_LIBPNG)
    add_executable(test_img_rw test_img_rw.cpp)
    target_link_libraries(test_img_rw radraycore GTest::gtest_main)
    gtest_discover_tests(test_img_rw WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
    radray_optimize_flags_binary(test_img_rw)
    radray_set_build_path(test_img_rw)
endif()
