# add_subdirectory(test_hello_world_triangle)
radray_add_test(test_binding_layout_builder SOURCES test_binding_layout_builder.cpp LINK_LIBS radraycore radrayrender)
if (RADRAY_ENABLE_D3D12)
    radray_add_test(test_d3d12_binding_layout_builder SOURCES test_d3d12_binding_layout_builder.cpp LINK_LIBS radraycore radrayrender)
endif()
if (RADRAY_ENABLE_VULKAN)
    radray_add_test(test_vulkan_binding_layout_builder SOURCES test_vulkan_binding_layout_builder.cpp LINK_LIBS radraycore radrayrender)
endif()
if (RADRAY_BUILD_WINDOW)
    radray_add_test(test_rhi_swapchain SOURCES test_rhi_swapchain.cpp LINK_LIBS radraycore radrayrender radraywindow)
endif()
